--- a/assets/sticky-atc-bar.css
+++ b/assets/sticky-atc-bar.css
@@ -3,7 +3,7 @@
     width: 100%;
     position: fixed;
     bottom: -100%;
-    z-index: 1000000;
+    z-index: 11;
     border: 1px solid #CCCCCC;
     background: #FFFFFF;
 
@@ -14,7 +14,7 @@
     transition: bottom 0.5s ease-in-out;
 }
 
-@media (max-width: 992px) {
+@media (max-width: 990px) {
     .c-sticky-atc-bar{
         flex-direction: column;
         gap: 10px;
@@ -34,7 +34,7 @@
     gap: 16px;
 }
 
-@media (max-width: 992px) {
+@media (max-width: 990px) {
     .c-sticky-atc-bar__variant-image{
         display: none;
     }
@@ -52,7 +52,7 @@
     gap: 8px;
 }
 
-@media (max-width: 992px) {
+@media (max-width: 990px) {
     .c-sticky-atc-bar__product-details{
         flex-direction: row;
     }
@@ -64,7 +64,7 @@
     line-height: 22px;
     margin: 0;
 }
-@media (max-width: 992px) {
+@media (max-width: 990px) {
     .c-sticky-atc-bar__product-title{
         display: none;
     }
@@ -76,7 +76,7 @@
     gap: 8px;
     min-width: 335px;
 }
-@media (max-width: 992px) {
+@media (max-width: 990px) {
     .c-sticky-atc-bar__product-price-container{
         justify-content: space-between;
     }
